--- a/bower.json
+++ b/bower.json
@@ -32,9 +32,10 @@
     "iron-form": "2.0-preview"
   },
   "resolutions": {
-    "test-fixture": "^2.0.0"
+    "test-fixture": "^2.0.0",
+    "polymer": "^2.0.0-rc.1" // iron-demo-helpers#2.0-preview etc still depend on polymer#2.0-preview
   },
   "dependencies": {
-    "polymer": "Polymer/polymer#2.0-preview"
+    "polymer": "Polymer/polymer#^2.0.0-rc.1"
   }
 }
