--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test": "wct"
   },
   "devDependencies": {
-    "eslint-config-vaadin": "github:vaadin/eslint-config-vaadin",
+    "eslint-config-vaadin": "^0.1.0",
     "eslint-plugin-html": "^1.7.0",
     "gemini": "^4.14.3",
     "gemini-polyserve": "^1.0.0",
@@ -31,8 +31,9 @@
     "gulp-html-extract": "^0.0.3",
     "gulp-stylelint": "^3.7.0",
     "lighthouse": "~1.2.2",
+    "polymer-cli": "next",
     "polyserve": "^0.15.0",
-    "stylelint-config-vaadin": "github:vaadin/stylelint-config-vaadin",
+    "stylelint-config-vaadin": "^0.1.0",
     "web-component-tester": "^5.0.0"
   }
 }
