--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,8 @@
     "elements-demo-resources": "vaadin/elements-demo-resources#2.0-preview",
     "iron-component-page": "polymerelements/iron-component-page#2.0-preview",
     "iron-demo-helpers": "polymerelements/iron-demo-helpers#2.0-preview",
-    "iron-form": "2.0-preview"
+    "iron-form": "2.0-preview",
+    "iron-ajax": "2.0-preview"
   },
   "resolutions": {
     "test-fixture": "^2.0.0",
