--- a/bower.json
+++ b/bower.json
@@ -36,6 +36,7 @@
     "polymer": "^2.0.0-rc.1"
   },
   "dependencies": {
-    "polymer": "Polymer/polymer#^2.0.0-rc.1"
+    "polymer": "Polymer/polymer#^2.0.0-rc.1",
+    "vaadin-themable-mixin": "vaadin/vaadin-themable-mixin#^1.0.0"
   }
 }
