Move gemini install step to TravisCI

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,9 @@ before_script:
   - ([ "$TRAVIS_EVENT_TYPE" = "pull_request" ] || TRAVIS_BRANCH=quick/${TRAVIS_BUILD_ID} xvfb-run -s '-screen 0 1024x768x24' wct)
 
 script:
-  - ([ "$TRAVIS_EVENT_TYPE" = "pull_request" ] || gemini test test/visual)
-  - ([ "$TRAVIS_EVENT_TYPE" = "pull_request" ] || gemini test test/visual -c .gemini-ie.yml)
+  - if [[ "$TRAVIS_EVENT_TYPE" != "pull_request" ]]; then
+      npm i gemini@^4.0.0 gemini-sauce gemini-polyserve;
+      gemini test test/visual;
+      gemini test test/visual -c .gemini-ie.yml;
+    fi
   - xvfb-run -s '-screen 0 1024x768x24' wct
