--- a/bower.json
+++ b/bower.json
@@ -33,10 +33,9 @@
   },
   "dependencies": {
     "polymer": "^2.0.0",
+    "iron-icon": "^2.0.0",
+    "iron-iconset-svg": "^2.0.0",
     "vaadin-themable-mixin": "vaadin/vaadin-themable-mixin#^1.1.0",
     "vaadin-control-state-mixin": "vaadin/vaadin-control-state-mixin#^1.0.1"
-  },
-  "resolutions": {
-    "iron-ajax": "^2.0.0"
   }
 }
