--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,7 @@
     "iron-demo-helpers": "^2.0.0",
     "iron-form": "^2.0.0",
     "iron-test-helpers": "^2.0.0",
+    "vaadin-themes": "^0.2.0",
     "web-component-tester": "^6.0.0"
   },
   "dependencies": {
