--- a/.gemini.yml
+++ b/.gemini.yml
@@ -1,5 +1,5 @@
-rootUrl: http://127.0.0.1:8080/components/vaadin-text-field/test/visual/
-gridUrl: http://127.0.0.1:4444/wd/hub
+rootUrl: http://localhost:8080/components/vaadin-text-field/test/visual/
+gridUrl: http://localhost:4444/wd/hub
 screenshotsDir: ./test/visual/screens
 
 system:
@@ -24,7 +24,7 @@ browsers:
   edge:
     desiredCapabilities:
       browserName: "microsoftedge"
-      version: "14"
+      version: "15"
       platform: "Windows 10"
 
   # The following setups don't currently work due to Selenium SafariDriver issue
