--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,8 @@ script:
       gemini test test/visual --component=vaadin-text-field -c .gemini-ie.yml &&
       gemini test test/visual --component=vaadin-password-field &&
       gemini test test/visual --component=vaadin-password-field -c .gemini-ie.yml &&
+      gemini test test/visual --component=vaadin-number-field &&
+      gemini test test/visual --component=vaadin-number-field -c .gemini-ie.yml &&
       xvfb-run -s '-screen 0 1024x768x24' polymer test --env saucelabs;
     fi
   - if [ "$TRAVIS_EVENT_TYPE" = "cron" ]; then
