--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_script:
 
 script:
   - if [[ "$TRAVIS_EVENT_TYPE" != "pull_request" && "$TRAVIS_BRANCH" != quick/* ]]; then
-      npm i gemini@^4.0.0 gemini-sauce gemini-polyserve &&
+      npm i --no-save gemini@^4.0.0 gemini-sauce gemini-polyserve &&
       gemini test test/visual --component=vaadin-text-field &&
       gemini test test/visual --component=vaadin-text-field -c .gemini-ie.yml &&
       gemini test test/visual --component=vaadin-password-field &&
