--- a/bower.json
+++ b/bower.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "polymer": "^2.0.0",
     "vaadin-themable-mixin": "^1.1.0",
-    "vaadin-control-state-mixin": "vaadin/vaadin-control-state-mixin#^1.0.1"
+    "vaadin-control-state-mixin": "vaadin/vaadin-control-state-mixin#^1.0.1",
+    "vaadin-valo-theme": "^2.0.0"
   }
 }
