--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,8 @@
     "iron-test-helpers": "^2.0.0",
     "webcomponentsjs": "^1.0.0",
     "web-component-tester": "^6.1.5",
-    "vaadin-demo-helpers": "^1.0.0"
+    "vaadin-demo-helpers": "^1.0.0",
+    "vaadin-button": "^2.0.0"
   },
   "dependencies": {
     "polymer": "^2.0.0",
