--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vaadin-text-field",
+  "name": "@vaadin/vaadin-text-field",
   "version": "2.0.0-beta4",
   "description": "vaadin-text-field",
   "main": "vaadin-text-field.html",
@@ -36,10 +36,8 @@
     "gulp-html-extract": "^0.3.0",
     "gulp-replace": "^0.6.1",
     "gulp-stylelint": "^7.0.0",
-    "polymer-cli": "^1.6.0",
     "stylelint": "^9.0.0",
     "stylelint-config-vaadin": "latest",
-    "web-component-tester": "^6.1.5",
-    "yargs": "^8.0.0"
+    "web-component-tester": "^6.1.5"
   }
 }
