--- a/bower.json
+++ b/bower.json
@@ -31,13 +31,13 @@
     "webcomponentsjs": "^1.0.0",
     "web-component-tester": "^6.1.5",
     "vaadin-demo-helpers": "^1.0.0",
-    "vaadin-button": "^2.0.0"
+    "vaadin-button": "vaadin/vaadin-button#p3-preview"
   },
   "dependencies": {
     "polymer": "^2.0.0",
-    "vaadin-themable-mixin": "^1.1.0",
-    "vaadin-control-state-mixin": "vaadin/vaadin-control-state-mixin#^2.0.0",
-    "vaadin-lumo-styles": "vaadin/vaadin-lumo-styles#^1.0.0",
-    "vaadin-element-mixin": "vaadin/vaadin-element-mixin#^1.0.1"
+    "vaadin-themable-mixin": "vaadin/vaadin-themable-mixin#p3-preview",
+    "vaadin-control-state-mixin": "vaadin/vaadin-control-state-mixin#p3-preview",
+    "vaadin-lumo-styles": "vaadin/vaadin-lumo-styles#p3-preview",
+    "vaadin-element-mixin": "vaadin/vaadin-element-mixin#p3-preview"
   }
 }
