--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,10 @@ before_script:
   - bower install
 
 env:
-  - TEST_SUITE=mobile, POLYMER=2
-  - TEST_SUITE=polyfilled, POLYMER=2
-  - TEST_SUITE=desktop, POLYMER=2
-  - TEST_SUITE=saucelabs-p3, POLYMER=3
+  - TEST_SUITE=mobile POLYMER=2
+  - TEST_SUITE=polyfilled POLYMER=2
+  - TEST_SUITE=desktop POLYMER=2
+  - TEST_SUITE=saucelabs-p3 POLYMER=3
 
 script:
   - if [[ "$TRAVIS_EVENT_TYPE" != "pull_request" && "$TRAVIS_BRANCH" != quick/* ]]; then
