--- a/.travis.yml
+++ b/.travis.yml
@@ -12,33 +12,40 @@ addons:
   chrome: stable
 
 before_script:
-  - npm install bower polymer-cli@next -g
+  - npm install -g bower
   - bower install
 
 env:
-  - TEST_SUITE=mobile POLYMER=2
-  - TEST_SUITE=polyfilled POLYMER=2
-  - TEST_SUITE=desktop POLYMER=2
-  - TEST_SUITE=saucelabs-p3 POLYMER=3
+  - POLYMER=2
+  - POLYMER=3
 
 script:
-  - if [[ "$TRAVIS_EVENT_TYPE" != "pull_request" && "$TRAVIS_BRANCH" != quick/* ]]; then
-      if [[ "$POLYMER" = "2" ]]; then
-        npm install;
-        gulp lint;
-        polymer lint --rules polymer-2 --input *.html;
-        polymer test --env saucelabs:$TEST_SUITE;
+  - if [[ "$POLYMER" = "2" ]]; then
+      npm install -g polymer-cli &&
+      npm install &&
+      gulp lint version:check &&
+      polymer lint --rules polymer-2 --input ./src/*.html ./theme/**/*.html &&
+      if [[ "$TRAVIS_EVENT_TYPE" = "pull_request" ]]; then
+        xvfb-run -s '-screen 0 1024x768x24' polymer test;
+      else
+        polymer test --env saucelabs;
       fi;
-      if [[ "$POLYMER" = "3" ]]; then
-        npm install -g yarn magi-cli;
-        (cd .. && git clone --depth 1 -b vaadin-components git://github.com/web-padawan/polymer-modulizer.git && cd polymer-modulizer && npm link);
-        rm -rf node_modules;
-        magi p3-convert --out .;
-        yarn install --flat;
+    fi
+
+  - if [[ "$POLYMER" = "3" ]]; then
+      npm install -g yarn magi-cli polymer-cli@next &&
+      (cd .. && git clone --depth 1 -b vaadin-components git://github.com/web-padawan/polymer-modulizer.git && cd polymer-modulizer && npm link) &&
+      rm -rf node_modules &&
+      magi p3-convert --out . &&
+      yarn install --flat &&
+      if [[ "$TRAVIS_EVENT_TYPE" = "pull_request" ]]; then
+        xvfb-run -s '-screen 0 1024x768x24' polymer test --module-resolution=node --npm -l chrome;
+      else
         polymer test --module-resolution=node --npm --env saucelabs-p3;
       fi;
     fi
+
   - if [[ "$TRAVIS_EVENT_TYPE" = "cron" ]]; then
-      npm install;
+      npm install &&
       polymer test --env saucelabs-cron;
     fi
