--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ script:
 
   - if [[ "$POLYMER" = "3" ]]; then
       npm install -g yarn magi-cli polymer-cli@next &&
-      (cd .. && git clone --depth 1 -b vaadin-components-next git://github.com/web-padawan/polymer-modulizer.git && cd polymer-modulizer && npm link) &&
+      (cd .. && git clone --depth 1 -b vaadin-components-rc git://github.com/web-padawan/polymer-modulizer.git && cd polymer-modulizer && npm link) &&
       rm -rf node_modules &&
       magi p3-convert --out . --import-style=name &&
       yarn install --flat &&
