--- a/bower.json
+++ b/bower.json
@@ -35,13 +35,14 @@
     "webcomponentsjs": "^1.0.0",
     "web-component-tester": "^6.1.5",
     "vaadin-demo-helpers": "^1.0.0",
-    "vaadin-button": "^2.0.0"
+    "vaadin-button": "#md-preview"
   },
   "dependencies": {
     "polymer": "^2.0.0",
     "vaadin-themable-mixin": "^1.1.0",
     "vaadin-control-state-mixin": "vaadin/vaadin-control-state-mixin#^2.0.0",
     "vaadin-lumo-styles": "vaadin/vaadin-lumo-styles#^1.0.0",
+    "vaadin-material-styles": "vaadin/vaadin-material-styles#md-preview",
     "vaadin-element-mixin": "vaadin/vaadin-element-mixin#^1.0.1"
   }
 }
