--- a/bower.json
+++ b/bower.json
@@ -34,7 +34,8 @@
     "bower_components",
     "gulpfile.js",
     "package-lock.json",
-    "wct.conf.js"
+    "wct.conf.js",
+    "test"
   ],
   "devDependencies": {
     "iron-component-page": "^3.0.0",
