--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   ],
   "scripts": {
     "debug": "web-test-runner test/*.test.js --watch",
+    "prestart": "polymer analyze vaadin-* > analysis.json",
+    "start": "web-dev-server --node-resolve --open",
     "test": "web-test-runner test/*.test.js --coverage",
     "test:sauce": "TEST_ENV=sauce npm test"
   },
@@ -43,9 +45,9 @@
     "@open-wc/testing-helpers": "^1.8.12",
     "@polymer/iron-component-page": "^4.0.0",
     "@polymer/iron-test-helpers": "^3.0.0",
+    "@web/dev-server": "0.0.24",
     "@web/test-runner": "^0.9.13",
     "@web/test-runner-saucelabs": "^0.1.3",
-    "@webcomponents/webcomponentsjs": "^2.0.0",
     "sinon": "^9.2.1"
   }
 }
