--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
     "src",
     "theme"
   ],
+  "scripts": {
+    "debug": "web-test-runner test/*.test.js --watch",
+    "test": "web-test-runner test/*.test.js --coverage",
+    "test:sauce": "TEST_ENV=sauce npm test"
+  },
   "dependencies": {
     "@polymer/polymer": "^3.0.0",
     "@vaadin/vaadin-themable-mixin": "^1.6.1",
@@ -34,10 +39,13 @@
     "@vaadin/vaadin-element-mixin": "^2.4.1"
   },
   "devDependencies": {
+    "@esm-bundle/chai": "^4.1.5",
+    "@open-wc/testing-helpers": "^1.8.12",
     "@polymer/iron-component-page": "^4.0.0",
-    "@polymer/iron-form": "^3.0.0",
     "@polymer/iron-test-helpers": "^3.0.0",
+    "@web/test-runner": "^0.9.13",
+    "@web/test-runner-saucelabs": "^0.1.3",
     "@webcomponents/webcomponentsjs": "^2.0.0",
-    "wct-browser-legacy": "^1.0.1"
+    "sinon": "^9.2.1"
   }
 }
