--- a/package.json
+++ b/package.json
@@ -27,7 +27,12 @@
   ],
   "scripts": {
     "debug": "web-test-runner test/*.test.js --watch",
+    "check-version": "magi check-version",
+    "lint": "npm run lint:js && npm run lint:css",
+    "lint:js": "eslint src theme test",
+    "lint:css": "stylelint src/*.js theme/**/*-styles.js",
     "prestart": "polymer analyze vaadin-* > analysis.json",
+    "preversion": "magi update-version",
     "screenshots": "hermione test/visual/test.js --update-refs",
     "start": "web-dev-server --node-resolve --open",
     "test": "web-test-runner test/*.test.js --coverage",
@@ -50,9 +55,19 @@
     "@web/dev-server": "0.0.24",
     "@web/test-runner": "^0.9.13",
     "@web/test-runner-saucelabs": "^0.1.3",
+    "eslint": "^7.13.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "hermione": "^3.9.0",
     "hermione-esm": "^0.4.0",
     "hermione-sauce": "^0.1.0",
-    "sinon": "^9.2.1"
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.1",
+    "magi-cli": "^0.28.0",
+    "prettier": "^2.2.0",
+    "sinon": "^9.2.1",
+    "stylelint": "^13.8.0",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-vaadin": "^0.2.7"
   }
 }
