--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
   "scripts": {
     "debug": "web-test-runner test/*.test.js --watch",
     "check-version": "magi check-version",
-    "lint": "npm run lint:js && npm run lint:css",
-    "lint:js": "eslint src theme test",
+    "lint": "npm run lint:js && npm run lint:css && npm run lint:types",
     "lint:css": "stylelint src/*.js theme/**/*-styles.js",
+    "lint:js": "eslint src theme test",
+    "lint:types": "tsc",
     "prestart": "polymer analyze vaadin-* > analysis.json",
     "preversion": "magi update-version",
     "screenshots": "hermione test/visual/test.js --update-refs",
@@ -67,6 +68,7 @@
     "sinon": "^9.2.1",
     "stylelint": "^13.8.0",
     "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-vaadin": "^0.2.7"
+    "stylelint-config-vaadin": "^0.2.7",
+    "typescript": "^4.1.2"
   }
 }
